--- a/package.json
+++ b/package.json
@@ -12,14 +12,18 @@
   "license": "ISC",
   "devDependencies": {
     "@types/express": "^4.17.21",
+    "@types/jsonwebtoken": "^9.0.5",
     "@types/mongoose": "^5.11.97",
     "@types/node": "^20.10.7",
     "concurrently": "^8.2.2",
     "nodemon": "^3.0.2"
   },
   "dependencies": {
+    "@types/bcrypt": "^5.0.2",
     "@types/dotenv": "^8.2.0",
+    "bcrypt": "^5.1.1",
     "dotenv": "^16.3.1",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.2"
   }
 }
